# ai_msc_robotic_systems_assignments

./: .gitignore  Assignment1.enc  Assignment2.enc  Assignment3.enc  README.md  ai_msc.rosinstall  assignment_guard.py  dependencies.bash
tt_umpire/: CMakeLists.txt  package.xml
tt_umpire/launch/: pal_gazebo.launch.py  sim_tt.launch.py  tiago_gazebo.launch.py
tt_umpire/maps/: pal_with_tt_table.pgm  pal_with_tt_table.yaml
tt_umpire/scripts/: basic_navigator_sim.py
tt_umpire/src/: tt_umpire.cpp
